fix header on mobile login view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,7 @@
 body {
   display: grid;
   grid-template-columns: 1fr 768px 1fr;
-  grid-template-rows: auto auto auto auto;
+  grid-template-rows: 248px auto auto auto;
   font-family: var(--serif-font);
   font-weight: 400;
   line-height: 1.75;
@@ -64,7 +64,6 @@ main {
   padding-top: 4em;
   padding-left: 3em;
   padding-right: 3em;
-  align-self: flex-start;
 }
 @media (max-width: 940px) {
   main {
